tests/errors/undefined_field.orus
struct Foo { a: i32 }
fn main() {
let f: Foo = Foo{a: 1}
print(f.b)
}
